index.css
:root {
    --bgColor: #F4F4F4;
    --divTitle: #5A537B;
    --divBodyText: #353535;
    --divBg:#FFFFFF;
  }

body {
    margin: 0;
    background-color: #1C1C1C;
    font-family: 'Inter', sans-serif;
}



body.dark{
    --bgColor: #1F2937;
    --divTitle: #CCC1FF;
    --divBodyText: #FFFFFF;
    --divBg:#273549;
}

main{
    background-color: var(--bgColor);
    width: 550px;
    margin: 0 auto;
}

.input-converter{
    background-color: #6943FF;
    color: #FFFFFF;
    padding: 20px 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2em;
}

h1{
    font-size: 1.7em;
    font-weight: 700;
    color: #FFFFFF; 
}

.number-input{
    width: 117px;
    height: 83px;
    border: 2px solid #B295FF;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
}

input{
    width: 100px;
    background-color: transparent;
    font-weight: 900;
    font-size: 3em;
    color: #FFFFFF;
    border: none;
    text-align: center;
    outline: transparent;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

button{
    cursor: pointer;
    width: 117px;
    border: none;
    border-radius: 5px;
    background-color: #FFFFFF;
    font-weight: 600;
    color: #3D3D3D;
    padding: 10px 20px;
    margin-bottom: 10px;
}

button:hover{
    background-color:#6943FF;
    color: #FFFFFF;
    border: 2px solid #B295FF;
}

.conversions-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2em;
    margin-top: 20px;
}
.length-container, .volume-container, .mass-container{
    width: 500px;
    background-color: var(--divBg);
    text-align: center;
    padding: 10px 0;
}

.mass-container{
    margin-bottom: 20px;
}

h2{
    color: var(--divTitle);
    font-size: 1.2em;
    font-weight: 500;
}

h3{
    color: var(--divBodyText);
    font-size: .9em;
    font-weight: 400;
    margin-top: 0;
}




/* The switch - the box around the slider */
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
    align-self: flex-end;
  }
  
  /* Hide default HTML checkbox */
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  /* The slider */
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: #10B981;
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px #10B981;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }

